implemented rest functions for manipulating comment dto's and did a little code refactoring